--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
                     } )
         });
     </script>
+    <script>
+        $( document ).ready(function() {
+            $( '.middle-icon' ).hover(
+                    function(){
+                        $(this).addClass('fa-spin')
+                    },
+                    function(){
+                        $(this).removeClass('fa-spin')
+
+                    } )
+        });
+    </script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
