--- a/index.html
+++ b/index.html
@@ -29,18 +29,6 @@
                     } )
         });
     </script>
-    <script>
-        $( document ).ready(function() {
-            $( '.middle-icon' ).hover(
-                    function(){
-                        $(this).addClass('fa-spin')
-                    },
-                    function(){
-                        $(this).removeClass('fa-spin')
-
-                    } )
-        });
-    </script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
@@ -120,7 +108,7 @@
             <div class="quote-sign"><b>Jane Hunt</b></div>
         </div>
         <ul class="faces">
-            <li><img src="img/face-2.jpg"></li>
+            <li class="active"><img src="img/face-2.jpg"></li>
             <li><img src="img/face-3.jpg"></li>
             <li><img src="img/face-4.jpg"></li>
             <li><img src="img/face-5.jpg"></li>
